show web in memberlist

--- a/src/data.yaml
+++ b/src/data.yaml
@@ -45,6 +45,7 @@ members:
     name: Jacob Jelen
     img: jacob-jelen.jpg
     refs:
+      web: jacobjelen.com
       twitter: jacobjelen
       telegram: jacobjelen
 
