--- a/src/data.yaml
+++ b/src/data.yaml
@@ -488,6 +488,16 @@ projects:
     years: 2023-
     confirmed: false
 
+  - name: YAC3F (Yet Another CREATE3 Factory)
+    members: [ radek ]
+    img: yac3f.webp
+    description: Deterministic deployment of custom contracts to the same address on multiple EVM chains.
+    tags: [ tools, devs ]
+    refs:
+      web: https://github.com/radeksvarz/yac3f
+      github: https://github.com/radeksvarz/yac3f
+    years: 2023-
+
   #- name: CZKC
   #  members: [ radek, petr-klein ]
   #  img: czkc.png
